--- a/web/components/editor/App.css
+++ b/web/components/editor/App.css
@@ -1,4 +1,4 @@
-.container {
+.editor-app {
   overflow: hidden;
   height: 100vh;
   display: flex;
